2004-10-05  Jörg Höhle  <hoehle@users.sourceforge.net>

	* foreign.d (FOREIGN-VARIABLE, FOREIGN-FUNCTION):
	new constructor functions.
	* subr.d, subrkw.d: add them

2004-10-05  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (unused): do not redefine (win32.d already defines it)

2004-10-05  Sam Steingold  <sds@gnu.org>

	* pathname.d (LAUNCH): exit_code is unsigned,
	so use fixnum() instead of sfixnum() and avoid a GCC warning

2004-10-05  Sam Steingold  <sds@gnu.org>

	* init.lisp: export ABSOLUTE-PATHNAME

2004-10-05  Sam Steingold  <sds@gnu.org>

	* pathname.d (ABSOLUTE-PATHNAME, physical_namestring):
	do not call check_no_wildcards()
	(use_default_dir) [PATHNAME_WIN32]: check that the :DEVICE is not :WILD

2004-10-05  Sam Steingold  <sds@gnu.org>

	* encoding.d (CONVERT-STRING-FROM-BYTES, CONVERT-STRING-TO-BYTES):
	check_encoding() can trigger GC
	Reported by Jörg Höhle

2004-10-05  Jörg Höhle  <hoehle@users.sourceforge.net>

	* foreign.d (fehler_foreign_variable, fehler_foreign_function):
	raise error of type type-error

2004-10-04  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/sock.lisp (open-unix-socket): use ABSOLUTE-PATHNAME
	(open-unix-socket-stream): new function, returns a STREAM

2004-10-04  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX::CONFSTR): use my_malloc()
	instead of malloc() because of error handling

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* pathname.d (ABSOLUTE-PATHNAME): New function.
	(physical_namestring): Call check_no_wildcards.
	* edit.lisp (edit-file): Use absolute-pathname instead of
	translate-pathname.
	* cfgwin32.lisp (edit-file): Likewise.
	* runprog.lisp (xstring): Likewise.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* modules/syscalls/calls.c (POSIX::MKNOD): Don't use two popSTACK()s
	in the same expression, as it has undefined behaviour.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* modules/syscalls/calls.c (POSIX::SET-LIMITS): Give a meaningful
	error message.
